[package]

name = "24daysofrust"
version = "0.0.1"
authors = ["Zbigniew Siciarz <zbigniew@siciarz.net>"]

[[bin]]
name = "day2"

[[bin]]
name = "day3"

[[bin]]
name = "day4"

[[bin]]
name = "day5"

[[bin]]
name = "day6"

[[bin]]
name = "day7"

[[bin]]
name = "day9"

[[bin]]
name = "day10"

[[bin]]
name = "day11"

[[bin]]
name = "day12"

[[bin]]
name = "day13"

[[bin]]
name = "day14"

#[[bin]]
#name = "day15"

[[bin]]
name = "day17"

[[bin]]
name = "day18"

[[bin]]
name = "day20"

[[bin]]
name = "day21"

[dependencies]
anymap = "~0.11.2"
csv = "~0.14.3"
docopt = "~0.6.78"
docopt_macros = "~0.6.81"
image = "~0.6.1"
itertools = "~0.4.10"
json_macros = "~0.3.0"
libc = "~0.2.5"
nalgebra = "~0.5.1"
num = "~0.1.31"
postgres_array = "~0.6.1"
postgres_range = "~0.8.1"
primal = "~0.2.3"
rand = "~0.3.13"
redis = "~0.5.2"
rust-crypto = "~0.2.34"
rustc-serialize = "~0.3.18"
time = "~0.1.34"
tau = "~1.0.4"
url = "~0.5.5"
uuid = "~0.1.18"
#zmq = "~0.7.0"

[dependencies.hyper]
version = "~0.7.2"

[dependencies.postgres]
version= "~0.11.3"
features = ["rustc-serialize", "time"]

#[dependencies.zmq]
#git = "https://github.com/erickt/rust-zmq.git"

[target.i686-uknown-linux-gnu.dependencies]
fuse = "~0.2.7"
postgres_macros = "~0.1.11"

[target.i686-uknown-linux-gnu.dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"

[target.x86_64-unknown-linux-gnu.dependencies]
fuse = "~0.2.7"
postgres_macros = "~0.1.11"

[target.x86_64-uknown-linux-gnu.dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"
