[package]

name = "24daysofrust"
version = "0.0.1"
authors = ["Zbigniew Siciarz <zbigniew@siciarz.net>"]

[[bin]]
name = "day2"

[[bin]]
name = "day3"

[[bin]]
name = "day4"

[[bin]]
name = "day5"

[[bin]]
name = "day6"

[[bin]]
name = "day7"

[[bin]]
name = "day9"

[[bin]]
name = "day10"

[[bin]]
name = "day11"

[[bin]]
name = "day12"

[[bin]]
name = "day13"

[[bin]]
name = "day14"

[[bin]]
name = "day15"

[[bin]]
name = "day17"

[[bin]]
name = "day18"

#[[bin]]
#name = "day20"

[[bin]]
name = "day21"

[dependencies]
anymap = "~0.12.0"
csv = "~0.14.4"
docopt = "~0.6.80"
docopt_macros = "~0.6.84"
image = "~0.10.0"
itertools = "~0.4.16"
json_macros = "~0.3.1"
libc = "~0.2.12"
nalgebra = "~0.8.2"
num = "~0.1.32"
postgres_array = "~0.6.2"
postgres_range = "~0.8.2"
primal = "~0.2.3"
rand = "~0.3.14"
redis = "~0.5.3"
rust-crypto = "~0.2.36"
rustc-serialize = "~0.3.18"
time = "~0.1.35"
tau = "~1.0.4"
url = "~1.1.1"
#zmq = "~0.7.0"

[dependencies.hyper]
version = "~0.9.8"

[dependencies.postgres]
version= "~0.11.9"
features = ["rustc-serialize", "time"]

[dependencies.uuid]
version = "~0.2.2"
features = ["v4"]

#[dependencies.zmq]
#git = "https://github.com/erickt/rust-zmq.git"

[target.i686-uknown-linux-gnu.dependencies]
fuse = "~0.2.7"
postgres_macros = "~0.1.11"

[target.i686-uknown-linux-gnu.dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"

[target.x86_64-unknown-linux-gnu.dependencies]
fuse = "~0.2.7"
postgres_macros = "~0.1.11"

[target.x86_64-uknown-linux-gnu.dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"
