[package]
name = "24daysofrust"
version = "0.0.1"
authors = ["Zbigniew Siciarz <zbigniew@siciarz.net>"]

[[bin]]
name = "day2"

[[bin]]
name = "day3"

[[bin]]
name = "day4"

[[bin]]
name = "day5"

[[bin]]
name = "day6"

[[bin]]
name = "day7"

[[bin]]
name = "day9"

[[bin]]
name = "day10"

[[bin]]
name = "day11"

[[bin]]
name = "day12"

[[bin]]
name = "day13"

[[bin]]
name = "day14"

[[bin]]
name = "day15"

[[bin]]
name = "day17"

[[bin]]
name = "day18"

[[bin]]
name = "day20"

[[bin]]
name = "day21"

[dependencies]
anymap = "0.12.0"
csv = "0.14.7"
docopt = "0.6.86"
docopt_macros = "0.6.86"
hyper = "0.9.14"
image = "0.10.3"
itertools = "0.5.8"
#json_macros = "0.3.2"
libc = "0.2.17"
nalgebra = "0.10.1"
num = "0.1.36"
postgres = { version = "0.13.4", features = ["with-rustc-serialize", "with-time"] }
postgres_array = "0.7.1"
#postgres_range = "0.8.2"
primal = "0.2.3"
rand = "0.3.14"
redis = "0.8.0"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.18"
time = "0.1.35"
tau = "1.0.4"
url = "1.2.4"
uuid = { version = "0.3.1", features = ["v4"] }
#zmq = "0.7.0"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"

[target.x86_64-apple-darwin.dependencies]
# `brew cask install osxfuse` first
fuse = "0.2.8"
#postgres_macros = "0.1.12"

[target.x86_64-apple-darwin.dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"

[target.i686-uknown-linux-gnu.dependencies]
fuse = "0.2.8"
#postgres_macros = "0.1.12"

[target.i686-uknown-linux-gnu.dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"

[target.x86_64-unknown-linux-gnu.dependencies]
fuse = "0.2.8"
#postgres_macros = "0.1.12"

[target.x86_64-uknown-linux-gnu.dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"
