[package]
name = "24daysofrust"
version = "0.0.1"
authors = ["Zbigniew Siciarz <zbigniew@siciarz.net>"]

[[bin]]
name = "day2"

[[bin]]
name = "day3"

#[[bin]]
#name = "day4"

[[bin]]
name = "day5"

[[bin]]
name = "day6"

[[bin]]
name = "day7"

[[bin]]
name = "day9"

[[bin]]
name = "day10"

[[bin]]
name = "day11"

[[bin]]
name = "day12"

[[bin]]
name = "day13"

[[bin]]
name = "day14"

[[bin]]
name = "day15"

[[bin]]
name = "day17"

[[bin]]
name = "day18"

[[bin]]
name = "day20"

[[bin]]
name = "day21"

[dependencies]
anymap = "0.12.1"
csv = "0.15.0"
docopt = "0.8.1"
#docopt_macros = "0.7.0"
hyper = { version = "0.10.13", default-features = false }
image = "0.17.0"
itertools = "0.7.2"
json_macros = { git = "https://github.com/zsiciarz/json_macros.git" }
libc = "0.2.24"
nalgebra = "0.12.3"
num = "0.1.40"
postgres = { version = "0.15.1", features = ["with-rustc-serialize", "with-time"] }
postgres_array = "0.9.0"
#postgres_range = "0.8.2"
primal = "0.2.3"
rand = "0.3.18"
redis = "0.8.0"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.18"
time = "0.1.38"
tau = "1.0.4"
url = "1.6.0"
uuid = { version = "0.5.1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
fuse = "0.3.1"
#postgres_macros = "0.1.13"
zmq = "0.8.2"

#[replace]
#"docopt_macros:0.7.0" = { git = "https://github.com/zsiciarz/docopt.rs.git" }
