[package]
name = "24daysofrust_vol2"
version = "0.0.1"
authors = ["Zbigniew Siciarz <zbigniew@siciarz.net>"]

[[bin]]
name = "day2"

[[bin]]
name = "day3"

[[bin]]
name = "day4"

[[bin]]
name = "day5"

[[bin]]
name = "day6"

[[bin]]
name = "day7"

[[bin]]
name = "day8"

[[bin]]
name = "day9"

[[bin]]
name = "day10"

[[bin]]
name = "day11"

[[bin]]
name = "day12"

[[bin]]
name = "day13"

[[bin]]
name = "day14"

[[bin]]
name = "day15"

[[bin]]
name = "day16"

[[bin]]
name = "day17"

[[bin]]
name = "day18"

[[bin]]
name = "day19"

[[bin]]
name = "day20"

[[bin]]
name = "day21"

#[[bin]]
#name = "day22"

[dependencies]
app_dirs = "1.1.1"
clap = "2.24.2"
derive_builder = "0.4.7"
dotenv = "0.10.0"
#envy = "0.1.2"
error-chain = "0.10.0"
hound = "3.1.0"
lazy_static = "0.2.8"
leftpad = "0.2.0"
#lettre = "0.6.1"
markdown = "0.2.0"
nom = "3.0.0"
num = "0.1.39"
num_cpus = "1.5.1"
preferences = { git = "https://github.com/Eh2406/preferences-rs.git", rev = "4f426cf52da97d3b8914e10d4492f953d4304238" }
phf = "0.7.21"
phf_macros = "0.7.21"
rand = "0.3.14"
rayon = "0.8.1"
reqwest = "0.6.2"
rustfft = "2.0.0"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
serde_yaml = "0.7.1"
slog = "2.0.6"
slog-json = "2.0.1"
slog-term = "2.0.1"
tempfile = "2.1.5"
tera = "0.10.6"
time = "0.1.37"
uuid = { version = "0.5.0", features = ["v4"] }
zip = "0.2.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.4"

[target.'cfg(unix)'.dependencies]
cursive = { git = "https://github.com/gyscos/Cursive", rev = "f485f608edcfc8a65e9b3ff79a0169ba94c0d4f5", default-features = false, features=["pancurses"] }
diesel = "0.13.0"
diesel_codegen = { version = "0.13.0", features=["postgres"]}
git2 = "0.6.6"
rust-lzma = "0.2.1"
