[package]
name = "24daysofrust_vol2"
version = "0.0.1"
authors = ["Zbigniew Siciarz <zbigniew@siciarz.net>"]

[[bin]]
name = "day2"

[[bin]]
name = "day3"

[[bin]]
name = "day4"

[[bin]]
name = "day5"

[[bin]]
name = "day6"

[[bin]]
name = "day7"

[[bin]]
name = "day8"

[[bin]]
name = "day9"

[[bin]]
name = "day10"

[[bin]]
name = "day11"

[[bin]]
name = "day12"

[[bin]]
name = "day13"

[[bin]]
name = "day14"

[[bin]]
name = "day15"

[[bin]]
name = "day16"

[[bin]]
name = "day17"

[[bin]]
name = "day18"

[[bin]]
name = "day19"

[[bin]]
name = "day20"

[[bin]]
name = "day21"

#[[bin]]
#name = "day22"

[dependencies]
app_dirs = "1.1.1"
clap = "2.27.1"
derive_builder = "0.5.0"
dotenv = "0.10.1"
#envy = "0.1.2"
error-chain = "0.10.0"
hound = "3.2.0"
lazy_static = "0.2.10"
leftpad = "0.2.0"
#lettre = "0.6.1"
markdown = "0.2.0"
nom = "3.2.1"
num = "0.1.40"
num_cpus = "1.6.2"
preferences = { git = "https://github.com/Eh2406/preferences-rs.git", rev = "4f426cf52da97d3b8914e10d4492f953d4304238" }
phf = "0.7.21"
phf_macros = "0.7.21"
rand = "0.3.18"
rayon = "0.8.2"
reqwest = "0.6.2"
rustfft = "2.0.0"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0.6"
serde_yaml = "0.7.2"
slog = "2.0.12"
slog-json = "2.0.2"
slog-term = "2.3.0"
tempfile = "2.1.5"
tera = "0.10.10"
time = "0.1.38"
uuid = { version = "0.5.1", features = ["v4"] }
zip = "0.2.6"

[target.'cfg(windows)'.dependencies]
winreg = "0.4"

[target.'cfg(unix)'.dependencies]
cursive = { git = "https://github.com/gyscos/Cursive", rev = "f485f608edcfc8a65e9b3ff79a0169ba94c0d4f5", default-features = false, features=["pancurses"] }
diesel = "0.16.0"
diesel_codegen = { version = "0.16.0", features=["postgres"]}
git2 = "0.6.8"
rust-lzma = "0.2.1"
